	Fixed so the default resize method for images are proportional shift/ctrl can be used to make an unproportional size.
	Fixed bug where the image_dimensions option of the image plugin would cause exceptions when it tried to update the size.
	Fixed bug where table cell dialog class field wasn't properly updated when editing an a table cell with an existing class.
	Fixed so images doesn't get a width/height applied if the image_dimensions option is set to false useful for responsive contents.
Version 4.0.28 (2014-05-27)
	Fixed critical issue with empty urls producing an exception when converted into absolute urls due to resent bug fix in tinymce.util.URI.
Version 4.0.27 (2014-05-27)
	Added support for definition lists to lists plugin and enter key logic. This can now created by the format menu.
	Added cmd option for the style_formats menu enables you to toggle commands on/off using the formats menu for example lists.
	Added definition lists to visualblocks plugin so these are properly visualized like other list elements.
	Added new paste_merge_formats option that reduces the number of nested text format elements produced on paste. Enabled by default.
	Added better support for nested link_list/image_list menu items each item can now have a "menu" item with subitems.
	Added "Add to Dictionary" support to spellchecker plugin when the backend tells that this feature is available.
	Added new table_default_attributes/table_default_styles options patch contributed by Dan Villiom Podlaski Christiansen.
	Added new table_class_list/table_cell_class_list/table_row_class_list options to table plugin.
	Added new invalid_styles/valid_classes options to better control what gets returned for the style/class attribute.
	Added new file_browser_callback_types option that allows you to specify where to display the picker based on dialog type.
	Fixed so the selected state is properly handled on nested menu items in listboxes patch contributed by Jelle Kralt.