@@ -3,6 +3,8 @@ Version 4.0.29 (2014-06-xx)
 	Fixed so the default resize method for images are proportional shift/ctrl can be used to make an unproportional size.
 	Fixed bug where the image_dimensions option of the image plugin would cause exceptions when it tried to update the size.
 	Fixed bug where table cell dialog class field wasn't properly updated when editing an a table cell with an existing class.
+	Fixed bug where Safari on Mac would produce webkit-fake-url for pasted images so these are now removed.
+	Fixed so it's possible to drag in images when the paste_data_images option is enabled. Might be useful for mail clients.
 	Fixed so images doesn't get a width/height applied if the image_dimensions option is set to false useful for responsive contents.
 Version 4.0.28 (2014-05-27)
 	Fixed critical issue with empty urls producing an exception when converted into absolute urls due to resent bug fix in tinymce.util.URI.
